--- a/source/index.html
+++ b/source/index.html
@@ -8,132 +8,163 @@
 </head>
 
 <body>
-  <header class="header-page">
-    <nav class="nav-main">
-      <ul class="nav-main__list navigation list">
-        <li class="navigation__item">
-          <a class="navigation__link" href="#">главная</a>
-        </li>
-        <li class="navigation__item">
-          <a class="navigation__link" href="#">фото и видео</a>
-        </li>
-        <li class="navigation__item">
-          <a class="navigation__link" href="#">форма отзыва</a>
-        </li>
-        <li class="navigation__item">
-          <a class="navigation__link" href="#">html academy</a>
-        </li>
-      </ul>
-      <a class="nav-main__logo-link" href="index.html">
-        <img class="nav-main__logo-image header-logo" src="img/logo-sedona-mobile.svg" alt="Изображение логотипа Sedona"
-          width="102" height="83">
-      </a>
-      <button class="nav-main__button-open">
-        <svg class="nav-main__svg-open" fill="#81b3d2" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
+<header class="header-page">
+  <nav class="nav-main">
+    <ul class="nav-main__list navigation list">
+      <li class="navigation__item">
+        <a class="navigation__link" href="#">главная</a>
+      </li>
+      <li class="navigation__item">
+        <a class="navigation__link" href="#">фото и видео</a>
+      </li>
+      <li class="navigation__item">
+        <a class="navigation__link" href="#">форма отзыва</a>
+      </li>
+      <li class="navigation__item">
+        <a class="navigation__link" href="#">html academy</a>
+      </li>
+    </ul>
+    <a class="nav-main__logo-link" href="index.html">
+      <img class="nav-main__logo-image header-logo" src="img/logo-sedona-mobile.svg" alt="Изображение логотипа Sedona"
+           width="102" height="83">
+    </a>
+    <button class="nav-main__button-open">
+      <svg class="nav-main__svg-open" fill="#81b3d2" version="1.0" xmlns="http://www.w3.org/2000/svg"
+           xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px"
+           viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
           <g>
             <rect width="22.928" height="3.964"/>
             <rect y="9.009" width="22.928" height="3.964"/>
             <rect y="18.018" width="22.928" height="3.964"/>
           </g>
         </svg>
-      </button>
-      <button class="nav-main__button-close">
-        <svg class="nav-main__svg-close" fill="#fff" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
-          <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+    </button>
+    <button class="nav-main__button-close">
+      <svg class="nav-main__svg-close" fill="#fff" version="1.0" xmlns="http://www.w3.org/2000/svg"
+           xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px"
+           viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+          <polygon
+            points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
         </svg>
-      </button>
-    </nav>
-    <div class="header-page__title-block">
-      <h1 class="header-page__title-index">
-        Седона - небольшой городок в Аризоне, заслуживающий большего!
-      </h1>
-      <p class="header-page__paragraph-index">
-        Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
-      </p>
-    </div>
-  </header>
-
-  <main class="main-page">
-    <ul class="main-page advantage-list list">
-      <li class="advantage-list__item advantage-1">
-        <div class="advantage-1__block">
-          <h2 class="advantage-1__title">Настоящий городок</h2>
-          <span class="advantage-1__number">--№1--</span>
-          <p>Седона не аттракцион для туристов, в нем течет своя жизнь</p>
-        </div>
-        <img src="image.jpg" alt="Фото города" width="50" height="50">
-      </li>
-      <li class="advantage-list__item housing">
-        <h2 class="housing__title">Жилье</h2>
-        <p class="housing__paragraph">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-      </li>
-      <li class="advantage-list__item souvenirs">
-        <h2 class="souvenirs__title">Сувениры</h2>
-        <p class="souvenirs__paragraph">Не только китайского, но и местного производства!</p>
-      </li>
-      <li class="advantage-list__item food">
-        <h2 class="food__title">Еда</h2>
-        <p class="food__paragraph">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-      </li>
-      <li class="advantage-list__item advantage-2">
-        <div class="advantage-2__block">
-          <h2 class="advantage-2__title">Там есть мост дьявола</h2>
-          <span class="advantage-2__number">--№2--</span>
-
-          <p class="advantage-2__paragraph">Да, по нему можно пройти! Если вы оселитесь, конечно</p>
-        </div>
-        <img class="advantage-2__image" src="Каньон.jpg" alt="фотография каньона" width="50" height="50">
-      </li>
-      <li class="advantage-list__item advantage-3">
-        <h2 class="advantage-3__title">Небольшая площадь</h2>
-        <span class="advantage-3__number">--№3--</span>
-        <p class="advantage-3__paragraph">Все интересные места находятся очень близко</p>
-      </li>
-      <li class="advantage-list__item advantage-4">
-        <h2 class="advantage-4__title">Красивая дорога</h2>
-        <span class="advantage-4__number">--№4--</span>
-        <p class="advantage-4__paragraph">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </li>
-      <li class="advantage-list__item advantage-5">
-        <h2 class="advantage-5__title">Мало туристов</h2>
-        <span class="advantage-5__number">--№5--</span>
-        <p class="advantage-5__paragraph">Большинство едет в Гранд Каньон и толпится там</p>
-      </li>
-    </ul>
-    <section class="main-page__find-hotel find-hotel">
-      <p class="find-hotel__title">Заинтересовались?</p>
-      <p class="find-hotel__paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
-        гостиниц в Седоне</p>
-      <a class="find-hotel__button" href="find-hotel.html">Найти гостиницу</a>
-    </section>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d456713.36206752557!2d-112.08681527711245!3d34.91377402507952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1563191067139!5m2!1sru!2sru"
-      width="320" height="300" style="border:0" allowfullscreen></iframe>
-  </main>
-
-  <footer class="footer-page">
-    <p class="footer-page__hashtag">
-      #visitsedona
+    </button>
+  </nav>
+  <div class="header-page__title-block index-header-block">
+    <h1 class="header-page__title-index">
+      Седона - небольшой городок в Аризоне, заслуживающий большего!
+    </h1>
+    <p class="header-page__paragraph-index">
+      Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
     </p>
-    <ul class="footer-page__list social-list list">
-      <li class="social-list__item">
-        <a class="social-list__link-twit" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
-        </a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link-fb" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
-        </a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link-ytb" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
-        </a>
-      </li>
-    </ul>
-    <a class="footer-page__link-academy" href="https://htmlacademy.ru/intensive/adaptive"
-      aria-label="Ссылка на сайт HTML Academy">
-      Разработано
-    </a>
-  </footer>
+  </div>
+</header>
+
+<main class="main-page">
+  <ul class="main-page advantage-list list">
+    <li class="advantage-list__item advantage-1">
+      <div class="advantage-1__block">
+        <h2 class="advantage-1__title">Настоящий городок</h2>
+        <span class="advantage-1__number">--№1--</span>
+        <p>Седона не аттракцион для туристов, в нем течет своя жизнь</p>
+      </div>
+      <img src="image.jpg" alt="Фото города" width="50" height="50">
+    </li>
+    <li class="advantage-list__item housing">
+      <h2 class="housing__title">Жилье</h2>
+      <p class="housing__paragraph">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+    </li>
+    <li class="advantage-list__item souvenirs">
+      <h2 class="souvenirs__title">Сувениры</h2>
+      <p class="souvenirs__paragraph">Не только китайского, но и местного производства!</p>
+    </li>
+    <li class="advantage-list__item food">
+      <h2 class="food__title">Еда</h2>
+      <p class="food__paragraph">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+    </li>
+    <li class="advantage-list__item advantage-2">
+      <div class="advantage-2__block">
+        <h2 class="advantage-2__title">Там есть мост дьявола</h2>
+        <span class="advantage-2__number">--№2--</span>
+
+        <p class="advantage-2__paragraph">Да, по нему можно пройти! Если вы оселитесь, конечно</p>
+      </div>
+      <img class="advantage-2__image" src="Каньон.jpg" alt="фотография каньона" width="50" height="50">
+    </li>
+    <li class="advantage-list__item advantage-3">
+      <h2 class="advantage-3__title">Небольшая площадь</h2>
+      <span class="advantage-3__number">--№3--</span>
+      <p class="advantage-3__paragraph">Все интересные места находятся очень близко</p>
+    </li>
+    <li class="advantage-list__item advantage-4">
+      <h2 class="advantage-4__title">Красивая дорога</h2>
+      <span class="advantage-4__number">--№4--</span>
+      <p class="advantage-4__paragraph">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    </li>
+    <li class="advantage-list__item advantage-5">
+      <h2 class="advantage-5__title">Мало туристов</h2>
+      <span class="advantage-5__number">--№5--</span>
+      <p class="advantage-5__paragraph">Большинство едет в Гранд Каньон и толпится там</p>
+    </li>
+  </ul>
+  <section class="main-page__find-hotel find-hotel">
+    <p class="find-hotel__title">Заинтересовались?</p>
+    <p class="find-hotel__paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+      гостиниц в Седоне</p>
+    <a class="find-hotel__button" href="find-hotel.html">Найти гостиницу</a>
+  </section>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d456713.36206752557!2d-112.08681527711245!3d34.91377402507952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1563191067139!5m2!1sru!2sru"
+    width="320" height="300" style="border:0" allowfullscreen></iframe>
+</main>
+
+<footer class="footer-page">
+  <p class="footer-page__hashtag hashtag">
+    #visitsedona
+  </p>
+  <ul class="footer-page__list social-list list">
+    <li class="social-list__item">
+      <a class="social-list__link-twit social-link" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
+        <svg class="social-list__svg-twit" fill="#ffffff" version="1.0" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px"
+             viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+  <g id="W6EeEF_1_">
+    <g>
+      <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+    </g>
+  </g>
+</svg>
+      </a>
+    </li>
+    <li class="social-list__item">
+      <a class="social-list__link-fb social-link" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
+        <svg class="social-list__svg-fb" fill="#ffffff" version="1.0" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px"
+             viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+  <path
+    d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+</svg>
+      </a>
+    </li>
+    <li class="social-list__item">
+      <a class="social-list__link-ytb social-link" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
+        <svg class="social-list__svg-ytb" fill="#ffffff" version="1.0" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px"
+             viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+  <path
+    d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+</svg>
+      </a>
+    </li>
+  </ul>
+  <a class="footer-page__link-academy link-academy" href="https://htmlacademy.ru/intensive/adaptive"
+     aria-label="Ссылка на сайт HTML Academy">
+    <p class="link-academy__paragraph">Разработано</p>
+    <svg class="link-academy__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="55" viewBox="0 0 60 60">
+      <path fill="#000000"
+            d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+    </svg>
+  </a>
+</footer>
 </body>
 
 </html>
