подключил мета вьюпорт, в формах и фото переписал пару классов в подвале, в индексе сделал модификаторы, переименовал классы

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sedona форма отзыва</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -153,7 +154,7 @@
     </p>
     <ul class="footer-page__list social-list list">
       <li class="social-list__item">
-        <a class="social-list__link-twit social-link" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
+        <a class="social-list__link social-link-twit link" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
           <svg class="social-list__svg-twit" fill="#ffffff" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px"
             viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
@@ -167,7 +168,7 @@
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link-fb social-link" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
+        <a class="social-list__link social-link-fb link" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
           <svg class="social-list__svg-fb" fill="#ffffff" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px"
             viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
@@ -177,7 +178,7 @@
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link-ytb social-link" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
+        <a class="social-list__link social-link-ytb link" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
           <svg class="social-list__svg-ytb" fill="#ffffff" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px"
             viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
@@ -187,7 +188,7 @@
         </a>
       </li>
     </ul>
-    <a class="footer-page__link-academy link-academy" href="https://htmlacademy.ru/intensive/adaptive"
+    <a class="footer-page__link-academy link-academy link" href="https://htmlacademy.ru/intensive/adaptive"
       aria-label="Ссылка на сайт HTML Academy">
       <p class="link-academy__paragraph">Разработано</p>
       <svg class="link-academy__svg" xmlns="http://www.w3.org/2000/svg" width="40" height="55" viewBox="0 0 60 60">
