--- a/source/photo.html
+++ b/source/photo.html
@@ -13,19 +13,19 @@
     <nav class="nav-main">
       <ul class="nav-main__list navigation list">
         <li class="navigation__item">
-          <a class="navigation__link" href="#">главная</a>
+          <a class="navigation__link link" href="#">главная</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">фото и видео</a>
+          <a class="navigation__link link" href="#">фото и видео</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">форма отзыва</a>
+          <a class="navigation__link link" href="#">форма отзыва</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">html academy</a>
+          <a class="navigation__link link" href="#">html academy</a>
         </li>
       </ul>
-      <a class="nav-main__logo-link" href="index.html">
+      <a class="nav-main__logo-link link" href="index.html">
         <img class="nav-main__logo-image header-logo" src="img/logo-sedona-mobile.svg" alt="Изображение логотипа Sedona"
           width="102" height="83">
       </a>
